package model.dungeon;

public interface Objective {

    String getWinCondition ();
    boolean isFullfilled ();

}
