package model.dungeon;


import constants.ModelProperties;
import model.effects.Condition;
import model.effects.EffectFactory;

import java.util.Random;

/**
 * A Factory, that produces different types Tiles.
 *
 * Uses Landscape-Enum to determine the specific type of Tile.
 *
 * A Tile can only be generated from this class.
 *
 * @author Hagen
 */
public class TileFactory {

    private TileFactory () {}


    //Everything is now in Tile Generator

}
